# u.leti.9892.6sem-2022.pais.1lab.mcs-lock

./: .gitignore  .report_config.json  CMakeLists.txt  README.md  main.cpp
color/: color.cpp  color.h
report/: report.tex
report/modules/: title_page.tex
report/modules/chapters/: conclusion.tex  goal.tex  listing.tex  solution.tex  task.tex  test_results.tex
report/scripts/: main.py
report/scripts/latex/: table.py
src/: main.cpp
src/color/: color.cpp  color.h
src/counter/: counter.cpp  counter.h
src/lock/: msc_lock.cpp  msc_lock.h
